bug solved: Extra gap in left section of problem-description

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -30,8 +30,17 @@
 }
 
 @media (min-width: 992px) {
+    .problem-detail-layout {
+        min-height: calc(100vh - 180px);
+    }
+
+    .problem-detail-column {
+        display: flex;
+        flex-direction: column;
+    }
+
     .problem-pane {
-        height: calc(100vh - 180px);
+        height: 100%;
     }
 
     .editor-column-divider {
